tests/examples/snapshots/fail/lockserver_bug.fly.z3.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/lockserver_bug.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: invariant is not inductive
   ┌─ tests/examples/fail/lockserver_bug.fly:24:1
   │
24 │ assert always (forall N1:node, N2:node. holds_lock(N1) & holds_lock(N2) -> N1 = N2)
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = counter example:
     lock_msg(@node_0) = true
     grant_msg(@node_0) = false
     unlock_msg(@node_0) = false
     holds_lock(@node_0) = false
     server_holds_lock = true


